# FETISH-RS

./: .gitignore  Cargo.toml  LICENSE
fetish-lib/: Cargo.toml  README.md
fetish-lib/src/: application_table.rs  array_utils.rs  compressed_inv_schmear.rs  count_sketch.rs  data_points.rs  elaborator.rs  embedder_state.rs  embedding_space.rs  everything.rs  feature_collection.rs  feature_space_info.rs  fourier_feature_collection.rs  func_impl.rs  func_inverse_schmear.rs  func_scatter_tensor.rs  func_schmear.rs  function_space_info.rs  interpreter_and_embedder_state.rs  interpreter_state.rs  kernel.rs  lib.rs  linalg_utils.rs  linear_sketch.rs  model.rs  model_space.rs  newly_evaluated_terms.rs  normal_inverse_wishart.rs  normal_inverse_wishart_sampler.rs  params.rs  primitive_directory.rs  primitive_term_pointer.rs  primitive_type_space.rs  prior_specification.rs  pseudoinverse.rs  quadratic_feature_collection.rs  rand_utils.rs  sampled_embedder_state.rs  sampled_embedding_space.rs  sampled_model_embedding.rs  schmear.rs  (+18 more)
src/: affine_transform.rs  alpha_formulas.rs  application_chain.rs  application_table.rs  array_utils.rs  bayes_utils.rs  bounded_hole.rs  bounded_holed_application.rs  bounded_holed_linear_expression.rs  cauchy_fourier_features.rs  chi_squared_inverse_cdf.rs  chi_squared_inverse_cdf_solver.rs  closest_psd_matrix.rs  compressed_inv_schmear.rs  constraint_collection.rs  context.rs  count_sketch.rs  data_point.rs  data_points.rs  data_update.rs  det_weighted_point.rs  displayable_with_context.rs  displayable_with_state.rs  elaborator.rs  ellipsoid.rs  ellipsoid_sampler.rs  embedder_state.rs  embedding_space.rs  enum_feature_collection.rs  everything.rs  feature_collection.rs  feature_space_info.rs  featurization_boundary_point_solver.rs  featurization_inverse_directory.rs  featurized_points.rs  featurized_points_directory.rs  fourier_feature_collection.rs  func_ellipsoid.rs  func_impl.rs  func_inverse_schmear.rs  (+81 more)
