[package]
name = "FETISH-RS"
version = "0.1.0"
authors = ["bubble-07 <spagrab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray={version = "0.13.1", features = ["blas"] }
ndarray-linalg={version = "0.12.1", features = ["openblas-src"]}
ndarray_einsum_beta="0.5.0"
rustfft="3.0.1"
rand="0.7.3"
ndarray-rand="0.11.0"
rand_distr="0.2.2"
enum_dispatch="0.3.0"
argmin={version = "0.3.1", features = ["ndarrayl"] }
arraymap="0.1.1"
plotlib="0.5.1"
lapack-src = {version = "0.6", default-features = false, features = ["openblas"]}
noisy_float="0.1.12"
lazy_static="1.4.0"
multimap="0.8.1"
topological-sort="0.1.0"
log="0.4.11"
pretty_env_logger="0.4.0"
#blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
#openblas-src = { version = "0.6.0", default-features = false, features = ["cblas"] }

[profile.release]
debug = true
