[package]
name = "fetish-lib"
version = "0.1.0"
authors = ["Alex Grabanski (bubble-07) <spagrab@gmail.com>, <agraban.xyz>"]
edition = "2018"
license = "MIT"
description = "(F)unctional (E)mbedding of (T)erms (I)n a (S)patial (H)ierarchy"
repository = "https://github.com/bubble-07/FETISH-RS/"
keywords = ["embedding", "functional", "interpreter", "ML", "research"]
categories = ["mathematics", "science", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray={version = "0.13.1", features = ["blas"] }
ndarray-linalg={version = "0.12.1", features = ["openblas-src"]}
rustfft="3.0.1"
rand="0.7.3"
ndarray-rand="0.11.0"
rand_distr="0.2.2"
lapack-src = {version = "0.6", default-features = false, features = ["openblas"]}
noisy_float="0.1.12"
multimap="0.8.1"
topological-sort="0.1.0"
log="0.4.11"
